--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,7 +14,10 @@ de:
     update: 'Update.to_german'
     start_date: 'Start Date.to_g'
     end_date: 'End Date.to_g'
-    download_data: "Download yesterday's data.to_g"        
+    download_data: "Download yesterday's data.to_g"
+    internal: nein
+    direct: nitch
+    organic: struddle        
      
   date:
     formats:
