Clean up the pie chart, and fix a bug in clearing the db in the fill task.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -16,7 +16,7 @@ de:
     end_date: 'End Date.to_g'
     download_data: "Download yesterday's data.to_g"
     internal: nein
-    direct: nitch
+    other: nitch
     organic: struddle        
      
   date:
