Change views to view.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
     other: Other
     organic: Search Engines
     article: Article
-    views: Views
+    views: View
     details: Details
     domains: Domains
     load_more: Load More
