--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -17,7 +17,7 @@ fr:
     organic: Search Engines
     article: Article
     views: Views
-    details: Details
+    details: Detail
     domains: Domains
     load_more: Load More
     generating_data:  Generating your data.
