Change view counts translation back to views.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,8 @@ en:
     other: Other
     organic: Search Engines
     article: Article
-    views: View
+    views: Views
+    view: View
     details: Details
     domains: Domains
     load_more: Load More
