--- a/README
+++ b/README
@@ -41,6 +41,21 @@ Make sure redis is installed and redis-server is in your path
  		Monitor rescue, visit: http://localhost:3000/resque
 ]
 
+DEVELOPMENT WITH INTERNATIONAL
+
+In development, we are not sharding the databases due to problems with testing. Instead, all language stats go into the same database on development! This is good news for you, in a sense, because the dev seeds that you created before will appear for writer 1 on net, de, and fr. Unfortunately, it's not good news if you want to test adding page views from languages and see these go into different databases, or other language database specific stuff.
+
+To view international stats in development, set up your /private/etc/hosts with the following hosts:
+
+127.0.0.1  stats.dev.suite101.com
+127.0.0.1  stats.dev.suite101.de
+127.0.0.1  stats.dev.suite101.fr
+127.0.0.1  stats.dev.suite101.net
+
+and visit, e.g., stats.dev.suite101.net:3000/test/1 .
+
+
+
 DEPLOYMENT / MANAGING SERVERS
 
 Add server hosts to your ~/.ssh/config file as in 'doc/ssh_hosts.txt'
