Rails stat's download csv doesn't work

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,7 @@ de:
 
   report:
     mysuite_link: Zurück zu MySuite
-    download_csv: Gestrige Daten herunterladen
+    download_csv: Gestrige Daten
     showing_all_articles: Alle Artikel anzeigen
     from: von
     to: bis
