--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,3 +38,4 @@ en:
     last_month: Last Month
     this_week: This week
     last_week: Last week
+    suite101_article_stats: suite101_article_stats
