Updated DE translation for which articles are helpful

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -30,7 +30,7 @@ de:
     how_people_finding_article: Wie haben Leser "%{title}" gefunden?
     keyphrases: Suchbegriffe
     helpful: Hilfreiche
-    which_useful_articles: Welche meiner Artikel Sie Leute finden, nützlich?
+    which_useful_articles: Welche meiner Artikel finden die Leser nützlich?
     helpfulness_for_article: Wie hilfreich die Leute finden "%{title}"?
     not_helpful: Nicht hilfreich
     vote_responses: Konkrete Antworten für "%{title}"
