Make total views also include 2 days ago.

--- a/README
+++ b/README
@@ -83,7 +83,8 @@ deploy:
 	> cap staging deploy
 	> cap production deploy
 	
-	
+run migrations on production:
+  > cap production deploy:migrate
 	
 
 
